# Clearstra

./: .gitignore  CHANGELOG.md  README.md  clearstra_run.py  cli.py  pyproject.toml
.pgf/: DESIGN-Clearstra.md  DESIGN-ClearstraMarkets.md  WORKPLAN-Clearstra.md  status-Clearstra.json
.pgxf/: INDEX-Clearstra.json
clearstra_core/: __init__.py  attestra_bridge.py  clearing.py  determinism.py  fingerprint.py  ledger.py  order.py  pricing.py  settlement.py  shock.py
clearstra_markets/: _base.py  agent_ops.py  buy_bloc.py  cold_capacity.py  cryo_futures.py  exclusive_grant.py  failure_futures.py  loader.py  mineral_shock.py  quadratic_carbon.py  refusal_option.py  reserve_flow.py  retrofit_receivable.py  shock_rehearsal.py
docs/: ARCHITECTURE.md  DETERMINISM.md  MARKET-CONTRACT.md
schemas/: allocation.schema.json  attestra-packet.schema.json  ledger.schema.json  manifest.schema.json  order-agentops.schema.json  order-bloc.schema.json  order-carbon.schema.json  order-cold.schema.json  order-cryo.schema.json  order-failure.schema.json  order-grant.schema.json  order-mineral.schema.json  order-refusal.schema.json  order-reserve.schema.json  order-retrofit.schema.json  order-shock.schema.json  settlement.schema.json
scripts/: smoke.sh
tests/: test_agent_ops_parity.py  test_core.py  test_markets.py  test_markets_contract.py  test_mineral_shock_parity.py  test_pipeline.py
