[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "clearstra"
version = "0.1.0"
description = "Deterministic clearing exchange platform — one kernel + N market packs (complementary to Attestra)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Jung Wook Yang", email = "sadpig70@gmail.com"}]
dependencies = []

[tool.setuptools]
packages = ["clearstra_core", "clearstra_markets"]
